[package]
name = "dangit"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "GitHub notifications, issues and PRs for your terminal"

[dependencies]
anyhow = "1.0.93"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
reqwest = { version = "0.12.9" ,features = ["json"] }
secrecy = "0.10.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tachyonfx = "0.9.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
webbrowser = "1.0.2"
